--- a/NorthwindWebApiApp/appsettings.json
+++ b/NorthwindWebApiApp/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "AllowedHosts": "*",
   "NorthwindServiceConfiguration": {
     "Uri": "https://services.odata.org/V3/Northwind/Northwind.svc"
   }
